force-app/main/default/objects/Nutrition_Plan__c/Nutrition_Plan__c.object-meta.xml
<CustomObject>
    <label>Nutrition Plan</label>
    <nameField>
        <displayFormat>Plan ID - {0000}</displayFormat>
        <label>Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nutrition Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>