force-app/main/default/objects/Nutrition_Plan__c/fields/Caloric_Intake__c.field-meta.xml
<CustomField>
    <fullName>Caloric_Intake__c</fullName>
    <label>Caloric Intake</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>