force-app/main/default/objects/Nutrition_Plan__c/fields/Goals__c.field-meta.xml
<CustomField>
    <fullName>Goals__c</fullName>
    <label>Goals</label>
    <type>TextArea</type>
</CustomField>