force-app/main/default/objects/Nutrition_Plan__c/fields/Meal_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Meal_Recommendations__c</fullName>
    <label>Meal Recommendations</label>
    <type>TextArea</type>
</CustomField>